# CoqInE

./: .coqrc  .gitignore  .merlin  .travis.yml  Make  Makefile  Makefile.input  Makefile.plugin  Makefile.test  README.md  TODO  coqine.opam  dune-project  flake.nix  inductive.dk  inductive2.dk  opam  stats.sh  vodk.nix
debug/: .Debuglib.aux  Debug.v  Debuglib.v  Make  Makefile  geocoq.sh
dedukti/: Coq.dk
draft/old_encodings/: 0_ac.dk  0_original.dk  0_original_short.dk  1_cumul_const.dk  1_cumul_const_short.dk  1_cumul_mixed_short.dk  1_test_inductive.dk
encodings/: 0_cast.dk  0_original.dk  0_original_short.dk  1_cumul_const.dk  1_cumul_mixed_short.dk  1a_private_lift.dk  1b_cumul_const.dk  Makefile  gen.sh  template.v
encodings/fixpoint/: fpredicates.dk  fullcodes.dk  fullcodes_multis.dk  fullcodes_poly.dk  fullcodes_poly_templ.dk  fullcodes_templ.dk  functionnal.dk  generic.dk  predicates.dk  try.dk
encodings/interfaces/: constructors.dk  full_constructors.dk  functional.dk  functionnal.dk  lift-predicates.dk  original.dk  original_cast.dk  predicates.dk  predicates_ac.dk  predicates_ac_cstr.dk  predicates_ac_cstr2.dk
encodings/private/: 3lift.dk  cast_predicate.dk  cast_predicate_func.dk  cast_predicate_split.dk  codes.dk  deepcodes.dk  f_cast_predicate.dk  fpredicates_eta.dk  fullcodes.dk  fullcodes_eta.dk  fullcodes_poly.dk  fullcodes_poly_cstr.dk  fullcodes_poly_templ.dk  fullcodes_poly_templ_linear.dk  fullcodes_templ.dk  functional.dk  functionnal.dk  lift-predicates.dk  original.dk  original_cast.dk  predicates.dk  predicates_eta.dk
encodings/tests/: test2.dk  test3.dk  test_fixpoint.dk  test_fp_fpredicates.dk  test_fp_predicates.dk
encodings/theories/: f_matita.dk  fpredicates.dk  functional.dk  functionnal.dk  lift-predicates.dk  original.dk  predicates.dk  predicates_ac.dk  test.dk  test1.dk  test2.dk  test3.dk
run/debug/: Debuglib.v  Make  Makefile  import.v  main.v
run/geocoq/: .coqrc  Makefile  MakefileBis  geocoq.sh  import.v  main.v
run/geocoq_orig/: Makefile  geocoq.sh  main.v
run/logipedia/: .gitignore  Makefile  import.v  main.v
run/main/: Make  Makefile  config.v  debug.v  import.v  import_debug.v  import_poly.v  main_debug.v  main_poly.v  main_test.v
run/mathcomp/: Make  main.v  (+2 more)
src/: Coqine.v  Dedukti.v  cname.ml  cname.mli  commands.ml4  commands.mlg  coqine_plugin.mllib  debug.ml  debug.mli  dedukti.ml  dedukti.mli  dune  encoding.ml  encoding.mli  environment.ml  error.ml  error.mli  export.ml4  inductives.ml  inductives.mli  info.ml  info.mli  libraries.ml  libraries.mli  main.ml  modules.ml  modules.mli  name.ml  name.mli  parameters.ml  parameters.mli  sorts.ml4  sorts2.ml4  terms.ml  terms.mli  translation.ml  translator.ml  translator.mli  tsorts.ml  tsorts.mli  (+7 more)
t/: Coq1univ.dk
test/: AllStdlib.v  Cast.v  CoInductives.v  Debug.v  Debuglib.v  Fixpoints.v  Identity.v  ImportB.v  Inductives.v  Let.v  Makefile  Makefile.test  Polymorph.v  Test.v  debug.out
theories/: dune
(+36 files in other folders)
