(library
 (name coqine)               ; This is the name you will use in
                                    ; Coq's `Declare ML Module`, and
                                    ; the name of the main OCaml
                                    ; module of your plugin.

 (public_name coqine)               ; This makes the plugin
                                    ; installable; recommended, must
                                    ; match opam package name

 (synopsis "Coqine Plugin")   ; Synopsis, used in META generation

 (flags :standard -rectypes -w -27) ; Coq requires the `-rectypes`
                                    ; flag; CoqPP generated code
                                    ; requires to disable warning 27
                                    ; often.

 (libraries                         ; ML Libraries we want to link
                                    ; with, your choice here.
   coq-core.vernac                       ; needed for vernac extend
   coq-core.plugins.ltac                 ; needed for tactic extend
))

; This will let Dune know about Coq's .mlg grammar files.
(coq.pp (modules commands))
